flowc/tests/fixtures/check_e145_empty_list_notype.flow
flow demo(int) -> int {
  xs = []
  it
}
